--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
                                     </div>
                                     <form class="login-form">
                                         <div>
+                                            <label for="id">id</label>
                                             <input type="text" id="id" placeholder="아이디">
+                                            <label for="pw">password</label>
                                             <input type="password" id="pw" placeholder="패스워드">
                                         </div>
                                         <div>
@@ -78,7 +80,7 @@
     <main>
     <!-- MAIN -->
     <div class="main-1">
-        <img src="img/main.png" alt="">
+        <img src="img/main.png" alt="main">
         <div class="main-2">
             <div>
                 미니데코
@@ -102,7 +104,7 @@
 
     <article class="new-list">
         <figure class="new-big new-figure">
-            <img src="img/new1.jpg" alt="">
+            <img src="img/new1.jpg" alt="new1">
             <div class="list-title">
                 <span class="list-title1">NEW</span>
                 <span class="list-title2">새로나온 상품</span>
@@ -115,7 +117,7 @@
         </figure>
         <div class="new-small">
             <figure class="new-small1 new-figure">
-                <img src="img/new2.jpg" alt="">
+                <img src="img/new2.jpg" alt="new2">
                 <figcaption>
                     <p>앤틱<br>서랍장</p>
                     <p>
@@ -124,7 +126,7 @@
                 </figcaption>
             </figure>
             <figure class="new-small2 new-figure">
-                <img src="img/new3.jpg" alt="">
+                <img src="img/new3.jpg" alt="new3">
                 <figcaption>
                     <p>귀여운<br>토끼침대</p>
                     <p>39,000원</p>
@@ -137,13 +139,13 @@
     <article class="onsale-list">
         <div class="onsale-item-con1 onsale-item-con">
             <figure class="onsale-item1 onsale-item">
-                <img src="img/sale1.jpg" alt="">
+                <img src="img/sale1.jpg" alt="onsale1">
                 <div class="list-title">
                     <span class="list-title1">ON SALE</span>
                     <span class="list-title2">할인상품</span>
                 </div>
                 <figcaption> 
-                    <p class="onsale-percent">20%</p>
+                    <h3 class="onsale-percent">20%</h3>
                     <div class="fig-bg"><!-- icon -->
                         <div class="fig-bt1">
                             <a href=""><div>
@@ -175,9 +177,9 @@
         </div>
         <div class="onsale-item-con2 onsale-item-con">
             <figure class="onsale-item2 onsale-item">
-                <img src="img/sale1.jpg" alt="">
+                <img src="img/sale1.jpg" alt="onsale2">
                 <figcaption>
-                    <p class="onsale-percent">20%</p>
+                    <h3 class="onsale-percent">20%</h3>
                     <div class="fig-bg"><!-- img src -->
                         <div class="fig-bt1">
                             <a href=""><div>
@@ -208,9 +210,9 @@
         </div>
         <div class="onsale-item-con3 onsale-item-con">
             <figure class="onsale-item3 onsale-item">
-                <img src="img/sale1.jpg" alt="">
+                <img src="img/sale1.jpg" alt="onsale3">
                 <figcaption>
-                    <p class="onsale-percent">20%</p>
+                    <h3 class="onsale-percent">20%</h3>
                     <div class="fig-bg">
                         <div class="fig-bt1">
                             <a href=""><div>
@@ -246,7 +248,7 @@
     <article class="special-list">
         <div class="special-item-con1 special-item-con">
             <figure class="special-item1 special-item">
-                <img src="img/special1.jpg" alt="">
+                <img src="img/special1.jpg" alt="special1">
                 <div class="list-title">
                     <span class="list-title1">SPECIAL</span>
                     <span class="list-title2">좀 더 특별한</span>
@@ -282,7 +284,7 @@
         </div>
         <div class="special-item-con2 special-item-con">
             <figure class="special-item2 special-item">
-                <img src="img/special1.jpg" alt="">
+                <img src="img/special1.jpg" alt="special2">
                 <figcaption>
                     <div class="fig-bg">
                         <div class="fig-bt1">
@@ -314,7 +316,7 @@
         </div>
         <div class="special-item-con3 special-item-con">
             <figure class="special-item3 special-item">
-                <img src="img/special1.jpg" alt="">
+                <img src="img/special1.jpg" alt="special3">
                 <figcaption>
                     <div class="fig-bg">
                         <div class="fig-bt1">
@@ -346,7 +348,7 @@
         </div>
         <div class="special-item-con4 special-item-con">
             <figure class="special-item4 special-item">
-                <img src="img/special1.jpg" alt="">
+                <img src="img/special1.jpg" alt="special4">
                 <figcaption>
                     <div class="fig-bg">
                         <div class="fig-bt1">
@@ -378,7 +380,7 @@
         </div>
         <div class="special-item-con5 special-item-con">
             <figure class="special-item5 special-item">
-                <img src="img/special1.jpg" alt="">
+                <img src="img/special1.jpg" alt="special5">
                 <figcaption>
                     <div class="fig-bg">
                         <div class="fig-bt1">
@@ -410,7 +412,7 @@
         </div>
         <div class="special-item-con6 special-item-con">
             <figure class="special-item6 special-item">
-                <img src="img/special1.jpg" alt="">
+                <img src="img/special1.jpg" alt="special6">
                 <figcaption>
                     <div class="fig-bg">
                         <div class="fig-bt1">
@@ -442,7 +444,7 @@
         </div>
         <div class="special-item-con7 special-item-con">
             <figure class="special-item7 special-item">
-                <img src="img/special1.jpg" alt="">
+                <img src="img/special1.jpg" alt="special7">
                 <figcaption>
                     <div class="fig-bg">
                         <div class="fig-bt1">
@@ -474,7 +476,7 @@
         </div>
         <div class="special-item-con8 special-item-con">
             <figure class="special-item8 special-item">
-                <img src="img/special1.jpg" alt="">
+                <img src="img/special1.jpg" alt="special8">
                 <figcaption>
                     <div class="fig-bg">
                         <div class="fig-bt1">
@@ -515,7 +517,7 @@
                 
             </div>
             <div class="banner-gom">
-                <img src="img/gom.png" alt="" width="265px">
+                <img src="img/gom.png" alt="banner1" width="265px">
             </div>
         </article>
     </a>
@@ -540,7 +542,7 @@
         <div class="best-list">
             <div class="best-item-con1 best-item-con">
                 <figure class="best-item1 best-item">
-                    <img src="img/special1.jpg" alt="">
+                    <img src="img/special1.jpg" alt="best1">
                     <div class="list-title">
                         <span class="list-title1">BEST</span>
                         <span class="list-title2">많은 사랑을 받은</span>
@@ -589,7 +591,7 @@
             </div>
             <div class="best-item-con2 best-item-con">
                 <figure class="best-item2 best-item">
-                    <img src="img/special1.jpg" alt="">
+                    <img src="img/special1.jpg" alt="best2">
                     <figcaption>
                         <div class="fig-bg">
                             <div class="fig-bt1">
@@ -621,7 +623,7 @@
             </div>
             <div class="best-item-con3 best-item-con">
                 <figure class="best-item3 best-item">
-                    <img src="img/special1.jpg" alt="">
+                    <img src="img/special1.jpg" alt="best3">
                     <figcaption>
                         <div class="fig-bg">
                             <div class="fig-bt1">
@@ -653,7 +655,7 @@
             </div>
             <div class="best-item-con4 best-item-con">
                 <figure class="best-item4 best-item">
-                    <img src="img/special1.jpg" alt="">
+                    <img src="img/special1.jpg" alt="best4">
                     <figcaption>
                         <div class="fig-bg">
                             <div class="fig-bt1">
@@ -685,7 +687,7 @@
             </div>
             <div class="best-item-con5 best-item-con">
                 <figure class="best-item5 best-item">
-                    <img src="img/special1.jpg" alt="">
+                    <img src="img/special1.jpg" alt="best5">
                     <figcaption>
                         <div class="fig-bg">
                             <div class="fig-bt1">
@@ -717,7 +719,7 @@
             </div>
             <div class="best-item-con6 best-item-con">
                 <figure class="best-item6 best-item">
-                    <img src="img/special1.jpg" alt="">
+                    <img src="img/special1.jpg" alt="best6">
                     <figcaption>
                         <div class="fig-bg">
                             <div class="fig-bt1">
@@ -755,7 +757,7 @@
     <article class="review-list">
         <div class="review-item-con1 review-item-con">
             <figure class="review-item1 review-item">
-                <img src="img/review1.png" alt="">
+                <img src="img/review1.png" alt="review1">
                 <div class="list-title">
                     <span class="list-title1">REVIEW</span>
                     <span class="list-title2">상품후기</span>
@@ -792,7 +794,7 @@
         </div>
         <div class="review-item-con2 review-item-con">
             <figure class="review-item2 review-item">
-                <img src="img/review1.png" alt="">
+                <img src="img/review1.png" alt="review2">
                 <figcaption>
                     <div class="fig-bg">
                         <div class="fig-bt1">
@@ -825,7 +827,7 @@
         </div>
         <div class="review-item-con3 review-item-con">
             <figure class="review-item3 review-item">
-                <img src="img/review1.png" alt="">
+                <img src="img/review1.png" alt="review3">
                 <figcaption>
                     <div class="fig-bg">
                         <div class="fig-bt1">
