--- a/category.html
+++ b/category.html
@@ -52,7 +52,9 @@
                                     </div>
                                     <form class="login-form">
                                         <div>
+                                            <label for="id"></label>
                                             <input type="text" id="id" placeholder="아이디">
+                                            <label for="pw"></label>
                                             <input type="password" id="pw" placeholder="패스워드">
                                         </div>
                                         <div>
