--- a/myinfo.html
+++ b/myinfo.html
@@ -49,7 +49,9 @@
                                     </div>
                                     <form class="login-form">
                                         <div>
+                                            <label for="id">id</label>
                                             <input type="text" id="id" placeholder="아이디">
+                                            <label for="pw">password</label>
                                             <input type="password" id="pw" placeholder="패스워드">
                                         </div>
                                         <div>
