--- a/notice.html
+++ b/notice.html
@@ -50,7 +50,9 @@
                                         </div>
                                         <form class="login-form">
                                             <div>
+                                                <label for="id">id</label>
                                                 <input type="text" id="id" placeholder="아이디">
+                                                <label for="pw">password</label>
                                                 <input type="password" id="pw" placeholder="패스워드">
                                             </div>
                                             <div>
