--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
         <label for="burger"><span>버거</span></label>
         <div class="header-2">
             <div class="header-3">
-                <div class="logo">
+                <h1 class="logo">
                     <!-- <img src="img/logo.png" alt="LOGO"></a> -->
                     <div><a href="index.html"><span>M</span>INI<SPAN>D</SPAN>ECO</a></div>
-                </div>
+                </h1>
                 <ul class="menu-1">
                     <li><a href="category.html">CATEGORY</a></li>
                     <li>
-                        <a href="notice.html">COMMUNITY</a>
+                        COMMUNITY
                         <ul class="dropdown1">
                             <li><a href="notice.html">notice</a></li>
                             <li><a href="review.html">review</a></li>
@@ -31,7 +31,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="cart.html">MYPAGE</a>
+                        MYPAGE
                         <ul class="dropdown2">
                             <li><a href="cart.html">cart</a></li>
                             <li><a href="myinfo.html">my info</a></li>
@@ -110,7 +110,7 @@
                 <span class="list-title2">새로나온 상품</span>
             </div>
             <figcaption>
-                <p>꽃과 빈티지 상자</p>
+                <h2>꽃과 빈티지 상자</h2>
                 <!-- <p>(L) DIY 글씨상자</p> -->
                 <p>39,000원</p>
             </figcaption>
@@ -119,7 +119,7 @@
             <figure class="new-small1 new-figure">
                 <img src="img/new2.jpg" alt="new2">
                 <figcaption>
-                    <p>앤틱<br>서랍장</p>
+                    <h2>앤틱<br>서랍장</h2>
                     <p>
                         39,000원
                     </p>
@@ -128,7 +128,7 @@
             <figure class="new-small2 new-figure">
                 <img src="img/new3.jpg" alt="new3">
                 <figcaption>
-                    <p>귀여운<br>토끼침대</p>
+                    <h2>귀여운<br>토끼침대</h2>
                     <p>39,000원</p>
                 </figcaption>
             </figure>
@@ -526,7 +526,7 @@
     <article class="best">
         <div class="best-category">
             <ul class="best-category-list">
-                <li><h2><a href="category.html" alt="">CATEGORY</a></h2></li>
+                <li><h2>CATEGORY</h2></li>
                 <li><a href="" alt="">DIY미니어처</a></li>
                 <li><a href="" alt="">룸박스/케이스</a></li>
                 <li><a href="" alt="">나무제품</a></li>
@@ -558,6 +558,7 @@
                             <option>벽지/기타재료</option>
                             <option>핸드메이드</option>
                         </select>
+                        <label for="category-select">category</label>
                     </div>
                     
                     <figcaption>
