--- a/category.html
+++ b/category.html
@@ -16,14 +16,14 @@
         <label for="burger"><span>버거</span></label>
         <div class="header-2">
             <div class="header-3">
-                <div class="logo">
+                <h1 class="logo">
                     <!-- <img src="img/logo.png" alt="LOGO"></a> -->
                     <div><a href="index.html"><span>M</span>INI<SPAN>D</SPAN>ECO</a></div>
-                </div>
+                </h1>
                 <ul class="menu-1">
                     <li><a href="category.html">CATEGORY</a></li>
                     <li>
-                        <a href="notice.html">COMMUNITY</a>
+                        COMMUNITY
                         <ul class="dropdown1">
                             <li><a href="notice.html">notice</a></li>
                             <li><a href="review.html">review</a></li>
@@ -31,7 +31,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="cart.html">MYPAGE</a>
+                        MYPAGE
                         <ul class="dropdown2">
                             <li><a href="cart.html">cart</a></li>
                             <li><a href="myinfo.html">my info</a></li>
@@ -52,9 +52,9 @@
                                     </div>
                                     <form class="login-form">
                                         <div>
-                                            <label for="id"></label>
+                                            <label for="id">id</label>
                                             <input type="text" id="id" placeholder="아이디">
-                                            <label for="pw"></label>
+                                            <label for="pw">password</label>
                                             <input type="password" id="pw" placeholder="패스워드">
                                         </div>
                                         <div>
