--- a/qna.html
+++ b/qna.html
@@ -79,8 +79,9 @@
     <!-- SNS -->
     <div class="sns-bt">
         <ul>
-            <li><a href="https://www.instagram.com/minideco2216/" target="_blank"><img src="img/insta.jpg" alt=""></a></li>
-            <li><a href="https://story.kakao.com/" target="_blank"><img src="img/kakao.jpg" alt=""></a></li>
+            <li><a href="https://www.instagram.com/minideco2216/" target="_blank"><img src="img/insta.jpg" alt="insta"></a></li>
+            <li><a href="https://story.kakao.com/" target="_blank"><img src="img/kakao.jpg" alt="kakao"></a></li>
+            <li class="sns-hidden"></li>
         </ul>
     </div>
 
@@ -196,7 +197,8 @@
     </table>
     <div class="undertable">
         <form class="category-search">
-            <input type="search">
+            <input type="search" id="search">
+            <label for="search">search</label>
             <input type="image" src="img/search.jpg" alt=""></input>
         </form>
         <div class="pages">
