--- a/cart.html
+++ b/cart.html
@@ -79,8 +79,9 @@
     <!-- SNS -->
     <div class="sns-bt">
         <ul>
-            <li><a href="https://www.instagram.com/minideco2216/" target="_blank"><img src="img/insta.jpg" alt=""></a></li>
-            <li><a href="https://story.kakao.com/" target="_blank"><img src="img/kakao.jpg" alt=""></a></li>
+            <li><a href="https://www.instagram.com/minideco2216/" target="_blank"><img src="img/insta.jpg" alt="insta"></a></li>
+            <li><a href="https://story.kakao.com/" target="_blank"><img src="img/kakao.jpg" alt="kakao"></a></li>
+            <li class="sns-hidden"></li>
         </ul>
     </div>
 
