--- a/index.html
+++ b/index.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minideco</title>
+
+    <meta property="og:title" content="MINIDECO, 미니어처 돌하우스">
+    <meta property="og:url" content="https://jiyonginspace.github.io/minideco/">
+    <meta property="og:image" content="img/main.png">
+    <meta property="og:description" content="멋진 꿈의 공간으로의 초대- 꿈이 있는 작은 세상">
+
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="MINIDECO, 미니어처 돌하우스">
+    <meta name="twitter:url" content="https://jiyonginspace.github.io/minideco/">
+    <meta name="twitter:image" content="img/main.png">
+    <meta name="twitter:description" content="멋진 꿈의 공간으로의 초대- 꿈이 있는 작은 세상">
+
+    <link rel="shortcut icon" href="img/16.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114*114" href="img/114.png">
+
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined">
+    
+    <title>Minideco</title>
+
+ 
 </head>
 <body>
    
