--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined">
-    
+
     <title>Minideco</title>
 
  
@@ -565,21 +565,23 @@
             <div class="best-item-con1 best-item-con">
                 <figure class="best-item1 best-item">
                     <img src="img/special1.jpg" alt="best1">
-                    <div class="list-title">
+                    <div class="list-title-best">
                         <span class="list-title1">BEST</span>
-                        <span class="list-title2">많은 사랑을 받은</span>
-                        <select id="category-select">
-                            <option>DIY미니어처</option>
-                            <option>룸박스/케이스</option>
-                            <option>나무제품</option>
-                            <option>주방용품</option>
-                            <option>가구완제품</option>
-                            <option>소품류</option>
-                            <option>금속제품/조명</option>
-                            <option>천/레이스</option>
-                            <option>벽지/기타재료</option>
-                            <option>핸드메이드</option>
-                        </select>
+                        <span class="list-title2">인기상품</span>
+                        <div>
+                            <select id="category-select">
+                                <option>DIY미니어처</option>
+                                <option>룸박스/케이스</option>
+                                <option>나무제품</option>
+                                <option>주방용품</option>
+                                <option>가구완제품</option>
+                                <option>소품류</option>
+                                <option>금속제품/조명</option>
+                                <option>천/레이스</option>
+                                <option>벽지/기타재료</option>
+                                <option>핸드메이드</option>
+                            </select>
+                        </div>
                         <label for="category-select">category</label>
                     </div>
                     
@@ -883,6 +885,7 @@
         </div>
     </article>
     </main>
+
     <footer>
         <div class="footer1">
             <div><span>CS CENTER</span> <span>고객센터 </span></div> 010 1234 1234 ㅣ OPEN AM 10:00 - PM 5:00 ㅣ SAT.SUN.HOLIDAY OFF
