--- a/myinfo.html
+++ b/myinfo.html
@@ -6,11 +6,72 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minideco</title>
     <link rel="stylesheet" href="css/myinfo.css">
-    <script src="js/jquery-3.6.0.min.js"></script>
-    <script src="js/common.js" defer></script>
 </head>
 <body>
     <header class="header-1">
+        <input type="checkbox" id="burger" checked>
+        <label for="burger"><span>버거</span></label>
+        <div class="header-2">
+            <div class="header-3">
+                <h1 class="logo">
+                    <!-- <img src="img/logo.png" alt="LOGO"></a> -->
+                    <div><a href="index.html"><span>M</span>INI<SPAN>D</SPAN>ECO</a></div>
+                </h1>
+                <ul class="menu-1">
+                    <li><a href="category.html">CATEGORY</a></li>
+                    <li>
+                        COMMUNITY
+                        <ul class="dropdown1">
+                            <li><a href="notice.html">notice</a></li>
+                            <li><a href="review.html">review</a></li>
+                            <li><a href="qna.html">Q&A</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        MYPAGE
+                        <ul class="dropdown2">
+                            <li><a href="cart.html">cart</a></li>
+                            <li><a href="myinfo.html">my info</a></li>
+                        </ul>
+                    </li>
+                </ul>
+                <ul class="menu-2">
+                    <li>
+                        <input type="radio" id="login" name="login-signup">
+                        <div class="login-bg">
+                            <div class="login-modal">
+                                <input type="radio" id="exit" name="login-signup">
+                                <label for="exit"><span>끄기</span></label>
+                                <div class="login-con">
+                                    <div>
+                                        <h2>LOGIN</h2>
+                                        <span>회원로그인</span>
+                                    </div>
+                                    <form class="login-form">
+                                        <div>
+                                            <label for="id">id</label>
+                                            <input type="text" id="id" placeholder="아이디">
+                                            <label for="pw">password</label>
+                                            <input type="password" id="pw" placeholder="패스워드">
+                                        </div>
+                                        <div>
+                                            <input type="submit" id="sm" value="로그인">
+                                        </div>
+                                    </form>
+                                    <div>
+                                        <a href="signup.html" target="_blank"><span>회원가입 </span></a>
+                                        <span>아이디/비밀번호 찾기</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <label for="login">로그인</label>
+                    </li>
+                    <li><a href="signup.html" target="_blank">회원가입</a></label></li>
+                    <li><a href="">즐겨찾기</a></li>
+                </ul>
+            </div>
+        </div>
     </header>
 
 
@@ -45,7 +106,12 @@
 
 
     <footer>
-
+        <div class="footer1">
+            <div><span>CS CENTER</span> <span>고객센터 </span></div> 010 1234 1234 ㅣ OPEN AM 10:00 - PM 5:00 ㅣ SAT.SUN.HOLIDAY OFF
+        </div>
+        <div class="footer2">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. 
+        </div>
     </footer>
 
 </body>
