--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
         <div class="sns-hidden">▶</div>
     </div>
     <div class="sns-show handle-hidden">◀</div>
+
     <!-- NEW -->
 
     <article class="new-list">
@@ -290,262 +291,7 @@
     <div class="slide-left">왼쪽</div>
     <div class="slide-right">오른쪽</div>
     <article class="special-list">
-        <div class="special-item-con1 special-item-con">
-            <figure class="special-item1 special-item">
-                <img src="img/special1.jpg" alt="special1">
-                <figcaption>
-                    <div class="fig-bg">
-                        <div class="fig-bt1">
-                            <a href=""><div>
-                                <span class="material-icons-outlined">
-                                    open_in_new
-                                    </span></div></a>
-                            <a href=""><div>
-                                <span class="material-icons-outlined">
-                                    add_shopping_cart
-                                    </span></div></a>
-                            <a href=""><div>
-                                <span class="material-icons-outlined">
-                                favorite
-                                </span></div></a>
-                        </div>
-                    </div>                  
-                </figcaption>
-            </figure>
-            <div class="item-tag">
-                <div class="item-tag-price">
-                    <p>상품이름</p>
-                    <p>35,000원</p>
-                </div>
-                <div class="item-tag-content">
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-                </div>
-            </div>
-        </div>
-        <div class="special-item-con2 special-item-con">
-            <figure class="special-item2 special-item">
-                <img src="img/special1.jpg" alt="special2">
-                <figcaption>
-                    <div class="fig-bg">
-                        <div class="fig-bt1">
-                            <a href=""><div>
-                                <span class="material-icons-outlined">
-                                    open_in_new
-                                    </span></div></a>
-                            <a href=""><div>
-                                <span class="material-icons-outlined">
-                                    add_shopping_cart
-                                    </span></div></a>
-                            <a href=""><div>
-                                <span class="material-icons-outlined">
-                                favorite
-                                </span></div></a>
-                        </div>
-                    </div>
-                </figcaption>
-            </figure>
-            <div class="item-tag">
-                <div class="item-tag-price">
-                    <p>상품이름</p>
-                    <p>35,000원</p>
-                </div>
-                <div class="item-tag-content">
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-                </div>
-            </div>
-        </div>
-        <div class="special-item-con3 special-item-con">
-            <figure class="special-item3 special-item">
-                <img src="img/special1.jpg" alt="special3">
-                <figcaption>
-                    <div class="fig-bg">
-                        <div class="fig-bt1">
-                            <a href=""><div>
-                                <span class="material-icons-outlined">
-                                    open_in_new
-                                    </span></div></a>
-                            <a href=""><div>
-                                <span class="material-icons-outlined">
-                                    add_shopping_cart
-                                    </span></div></a>
-                            <a href=""><div>
-                                <span class="material-icons-outlined">
-                                favorite
-                                </span></div></a>
-                        </div>
-                    </div>
-                </figcaption>
-            </figure>
-            <div class="item-tag">
-                <div class="item-tag-price">
-                    <p>상품이름</p>
-                    <p>35,000원</p>
-                </div>
-                <div class="item-tag-content">
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-                </div>
-            </div>
-        </div>
-        <div class="special-item-con4 special-item-con">
-            <figure class="special-item4 special-item">
-                <img src="img/special1.jpg" alt="special4">
-                <figcaption>
-                    <div class="fig-bg">
-                        <div class="fig-bt1">
-                            <a href=""><div>
-                                <span class="material-icons-outlined">
-                                    open_in_new
-                                    </span></div></a>
-                            <a href=""><div>
-                                <span class="material-icons-outlined">
-                                    add_shopping_cart
-                                    </span></div></a>
-                            <a href=""><div>
-                                <span class="material-icons-outlined">
-                                favorite
-                                </span></div></a>
-                        </div>
-                    </div>
-                </figcaption>
-            </figure>
-            <div class="item-tag">
-                <div class="item-tag-price">
-                    <p>상품이름</p>
-                    <p>35,000원</p>
-                </div>
-                <div class="item-tag-content">
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-                </div>
-            </div>
-        </div>
-        <div class="special-item-con5 special-item-con">
-            <figure class="special-item5 special-item">
-                <img src="img/special1.jpg" alt="special5">
-                <figcaption>
-                    <div class="fig-bg">
-                        <div class="fig-bt1">
-                            <a href=""><div>
-                                <span class="material-icons-outlined">
-                                    open_in_new
-                                    </span></div></a>
-                            <a href=""><div>
-                                <span class="material-icons-outlined">
-                                    add_shopping_cart
-                                    </span></div></a>
-                            <a href=""><div>
-                                <span class="material-icons-outlined">
-                                favorite
-                                </span></div></a>
-                        </div>
-                    </div>
-                </figcaption>
-            </figure>
-            <div class="item-tag">
-                <div class="item-tag-price">
-                    <p>상품이름</p>
-                    <p>35,000원</p>
-                </div>
-                <div class="item-tag-content">
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-                </div>
-            </div>
-        </div>
-        <div class="special-item-con6 special-item-con">
-            <figure class="special-item6 special-item">
-                <img src="img/special1.jpg" alt="special6">
-                <figcaption>
-                    <div class="fig-bg">
-                        <div class="fig-bt1">
-                            <a href=""><div>
-                                <span class="material-icons-outlined">
-                                    open_in_new
-                                    </span></div></a>
-                            <a href=""><div>
-                                <span class="material-icons-outlined">
-                                    add_shopping_cart
-                                    </span></div></a>
-                            <a href=""><div>
-                                <span class="material-icons-outlined">
-                                favorite
-                                </span></div></a>
-                        </div>
-                    </div>
-                </figcaption>
-            </figure>
-            <div class="item-tag">
-                <div class="item-tag-price">
-                    <p>상품이름</p>
-                    <p>35,000원</p>
-                </div>
-                <div class="item-tag-content">
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-                </div>
-            </div>
-        </div>
-        <div class="special-item-con7 special-item-con">
-            <figure class="special-item7 special-item">
-                <img src="img/special1.jpg" alt="special7">
-                <figcaption>
-                    <div class="fig-bg">
-                        <div class="fig-bt1">
-                            <a href=""><div>
-                                <span class="material-icons-outlined">
-                                    open_in_new
-                                    </span></div></a>
-                            <a href=""><div>
-                                <span class="material-icons-outlined">
-                                    add_shopping_cart
-                                    </span></div></a>
-                            <a href=""><div>
-                                <span class="material-icons-outlined">
-                                favorite
-                                </span></div></a>
-                        </div>
-                    </div>
-                </figcaption>
-            </figure>
-            <div class="item-tag">
-                <div class="item-tag-price">
-                    <p>상품이름</p>
-                    <p>35,000원</p>
-                </div>
-                <div class="item-tag-content">
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-                </div>
-            </div>
-        </div>
-        <div class="special-item-con8 special-item-con">
-            <figure class="special-item8 special-item">
-                <img src="img/special1.jpg" alt="special8">
-                <figcaption>
-                    <div class="fig-bg">
-                        <div class="fig-bt1">
-                            <a href=""><div>
-                                <span class="material-icons-outlined">
-                                    open_in_new
-                                    </span></div></a>
-                            <a href=""><div>
-                                <span class="material-icons-outlined">
-                                    add_shopping_cart
-                                    </span></div></a>
-                            <a href=""><div>
-                                <span class="material-icons-outlined">
-                                favorite
-                                </span></div></a>
-                        </div>
-                    </div>
-                </figcaption>
-            </figure>
-            <div class="item-tag">
-                <div class="item-tag-price">
-                    <p>상품이름</p>
-                    <p>35,000원</p>
-                </div>
-                <div class="item-tag-content">
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-                </div>
-            </div>
-        </div>
+        <!-- index.json -->
     </article>
     </div>
 
