--- a/category.html
+++ b/category.html
@@ -78,39 +78,44 @@
         </div>
     </header>
 
-    <!-- 상품페이지 -->
+    <!-- 상세페이지 -->
     <div class="sp-bg">
         <div class="sp-modal">
             <div class="sp-content">
-                <figure class="sp-pt"></figure>
+                <figure class="sp-pt"></figure><!-- json -->
                 <div class="sp-mini-pt">
-                    <div class="sp-mini-pt1"></div>
-                    <div class="sp-mini-pt2"></div>
-                    <div class="sp-mini-pt3"></div>
+                    <!-- json -->
                 </div>
                 <div class="sp-info">
                     <div class="sp-info1">
-                    </div>
+                    </div><!-- json --> 
                     <div class="sp-info2">
                         <div class="sp-pm">
-                            <div>+</div>
+                            <div class="sum">-</div>
                             <div>1</div>
-                            <div>-</div>
+                            <div class="sum">+</div>
                         </div>
-                        <div class="sp-price">
+                        <div class="sp-price"><!-- json -->
                         </div>
                     </div>
+                    <div class="total-price">1000원</div>
                     <div class="sp-bt">
-                        <div class="sp-bt1"><a href=""><p>구매하기</p></a></div>
-                        <div class="sp-bt2"><a href=""><p></p></a></div>
-                        <div class="sp-bt2"><a href=""><p></p></a></div>
+                        <div class="sp-bt1"><a href="cart.html"><p>구매하기</p></a></div>
+                        <div class="sp-bt2">
+                            <span class="material-icons-outlined">
+                            add_shopping_cart</span></div>
+                        <div class="sp-bt2">
+                            <span class="material-icons-outlined">
+                            favorite</span></div>
                     </div>
                 </div>
+            </div>
+            <div class="modal-exit">
             </div>
         </div>
     </div>
 
-
+    <!-- 카테고리 -->
     <main>
         <div class="category">
             <div class="category-nav-con">
