--- a/index.html
+++ b/index.html
@@ -198,16 +198,16 @@
             <div class="best-category">
                 <ul class="best-category-list">
                     <li><h2>CATEGORY</h2></li>
-                    <li><a href="" alt="">DIY미니어처</a></li>
-                    <li><a href="" alt="">룸박스/케이스</a></li>
-                    <li><a href="" alt="">나무제품</a></li>
-                    <li><a href="" alt="">주방용품</a></li>
-                    <li><a href="" alt="">가구완제품</a></li>
-                    <li><a href="" alt="">소품류</a></li>
-                    <li><a href="" alt="">금속제품/조명</a></li>
-                    <li><a href="" alt="">천/레이스</a></li>
-                    <li><a href="" alt="">벽지/기타재료</a></li>
-                    <li><a href="" alt="">핸드메이드</a></li>
+                    <li><a href="" alt="" data-num="0">DIY미니어처</a></li>
+                    <li><a href="" alt="" data-num="1">룸박스/케이스</a></li>
+                    <li><a href="" alt="" data-num="2">나무제품</a></li>
+                    <li><a href="" alt="" data-num="3">주방용품</a></li>
+                    <li><a href="" alt="" data-num="4">가구완제품</a></li>
+                    <li><a href="" alt="" data-num="5">소품류</a></li>
+                    <li><a href="" alt="" data-num="6">금속제품/조명</a></li>
+                    <li><a href="" alt="" data-num="7">천/레이스</a></li>
+                    <li><a href="" alt="" data-num="8">벽지/기타재료</a></li>
+                    <li><a href="" alt="" data-num="9">핸드메이드</a></li>
                 </ul>
             </div>
             <div class="best-list">
